--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,11 +7,23 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta
+      name="keywords"
+      content="前端工程师,vue.js,node.js,博客网站"
+    />
     <title>小帅的个人博客</title>
     <!-- <%= htmlWebpackPlugin.options.title %> -->
   </head>
 
   <body>
+    <noscript>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
+    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
